[package]
name = "sct"
version = "0.1.3"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
description = "Certificate transparency SCT verification library"
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
homepage = "https://github.com/ctz/sct.rs"
repository = "https://github.com/ctz/sct.rs"
categories = ["network-programming", "cryptography"]

[dependencies]
ring = "0.11"
untrusted = "0.5"
