[package]
name = "sct"
version = "0.7.0"
edition = "2018"
rust-version = "1.56"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
description = "Certificate transparency SCT verification library"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
homepage = "https://github.com/rustls/sct.rs"
repository = "https://github.com/rustls/sct.rs"
categories = ["network-programming", "cryptography"]
exclude = ["/admin/"]

[dependencies]
ring = "0.16.20"
untrusted = "0.7.0"
